<resources>
    <string name="app_name">Quiz App</string>
    <string name="konishiwa">Konishiwa</string>
    <string name="test_your_japanese_knowledge">Test your Japanese knowledge :</string>
    <string name="results">Results</string>
    <string name="_1_what_s_the_meaning_of_ohayou">1-What\'s the meaning of \'Ohayou\'?</string>
    <string name="hello">Hello!</string>
    <string name="goodbye">GoodBye</string>
    <string name="good_morning">Good Morning</string>
    <string name="_2_what_s_the_meaning_of_watashi">2-What\'s the meaning of \'Watashi\'?</string>
    <string name="he">He</string>
    <string name="you">You</string>
    <string name="i">I</string>
    <string name="your_answer_please">Your answer, please</string>
    <string name="name">Name</string>
    <string name="bokuwa">Bokuwa</string>
    <string name="hanashi">Hanashi</string>
    <string name="_6_what_s_the_meaning_of_desu">6-What\'s the meaning of \'Desu\'?</string>
    <string name="i_m">I\'m</string>
    <string name="to_be">To be</string>
    <string name="me">Me</string>
    <string name="nomimasu">Nomimasu</string>
    <string name="tabemasu">Tabemasu</string>
    <string name="mimasu">Mimasu</string>
    <string name="where">Where ?</string>
    <string name="ii_yo">Ii yo</string>
    <string name="ii_desu_yo">Ii desu yo</string>
    <string name="kyou">Kyou</string>
    <string name="konya">Konya</string>
    <string name="ashita">Ashita</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="_7_what_s_the_meaning_of_akai">7-What\'s the meaning of \'Akai\'?</string>
    <string name="_8_what_s_the_meaning_of_eat">8-What\'s the meaning of \'Eat\'?</string>
    <string name="_9_what_s_the_meaning_of_it_s_good">9-What\'s the meaning of \'It\'s Good\'?</string>
    <string name="_10_what_s_the_meaning_of_tomorrow">10-What\'s the meaning of \'Tomorrow\'?</string>
    <string name="_5_what_s_the_meaning_of_cat">5-What\'s the meaning of \'Cat\'?</string>
    <string name="_4_what_s_the_meaning_of_name">4-What\'s the meaning of \'Name\'?</string>
    <string name="_3_what_s_the_right_meaning_for_thank_you">3-What\'s the right meaning for \'Thank You\'?</string>
</resources>
